package data;

public class TrainingDataException extends Exception {

	public TrainingDataException(String message) {
		super(message);
	}

	public TrainingDataException(Exception cause) {
		super(cause);
	}
}
